Closed Bug 2008003 Opened 7 months ago Closed 7 months ago

<hr> doesn't work inside <select multiple="yes">

Categories

(Core :: Layout: Form Controls, defect, P3)

Firefox 147
defect

Tracking

()

RESOLVED FIXED
148 Branch
Tracking Status
firefox148 --- fixed

People

(Reporter: roman.deev06, Assigned: emilio)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:147.0) Gecko/20100101 Firefox/147.0

Steps to reproduce:

<html>
<style>
    option {
        background: orange;
    }
</style>
<body>
<select multiple="yes">
    <option>First option</option>
    <option>&lt;hr&gt; should be after this option</option>
    <hr>
    <option>Third option</option>
</select>
</body>
</html>

Demo: https://deevroman.github.io/hr-inside-multiselect-firefox-bug
Attached is a screenshot of this page in Firefox, Chrome, and Safari

Actual results:

Firefox doesn't display the <hr> element

Expected results:

Firefox displays <hr> inside <select multiple="yes">

The Bugbug bot thinks this bug should belong to the 'Core::Layout: Form Controls' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Layout: Form Controls
Product: Firefox → Core

Single select deals with it in:

https://searchfox.org/firefox-main/rev/fb84c9bccbfc34b91613ff9f3c955a887c7e7196/toolkit/actors/SelectChild.sys.mjs#378

This seems to render just fine as-is. I'll add a WPT reftest if there's
none.

Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/56954 for changes under testing/web-platform/tests
Severity: -- → S3
Priority: -- → P3
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 148 Branch
Upstream PR merged by moz-wptsync-bot
QA Whiteboard: [qa-triage-done-c149/b148]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: