Bug 2008003 - Don't suppress <hr> in select. r=layout-reviewers,dholbert

Single select deals with it in:

  https://searchfox.org/firefox-main/rev/fb84c9bccbfc34b91613ff9f3c955a887c7e7196/toolkit/actors/SelectChild.sys.mjs#378

This seems to render just fine as-is. I'll add a WPT reftest if there's
none.

Differential Revision: https://phabricator.services.mozilla.com/D277707